--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "@mui/icons-material": "^5.14.6",
         "@mui/material": "^5.14.6",
         "@mui/x-data-grid": "^6.11.2",
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.1",
         "@tanstack/react-query": "^5.63.0",
         "axios": "^1.6.8",
